* 2013-04-26 - thorben.betten@open-xchange.com

 - Fix for bug 26198: Consider "timezone" URL parameter for mail module's ALL and LIST request
 - Fix for bug 26188: Improved error message if a publication has been revoked in the meantime

* 2013-04-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 26185: Changed default values in contact-storage-ldap/cache.properties template

* 2013-04-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 25799: Don't query contact image data for GET request   

* 2013-04-25 - thorben.betten@open-xchange.com

 - Fix for bug 26116: Invalidate cache entry on document change/deletion
 - Fix for bug 26120: Adapted logging behavior to client actions
 - Fix for bug 26170: Added template file to Debian packaging file "conffiles"

* 2013-04-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 26076: Deserialize 'image1' field in user update action   

* 2013-04-23 - thorben.betten@open-xchange.com

 - Fix for bug 25791: Reliably enter stop() routine through registering own shut-down hook for document converter
 - Fix for bug 26075: Understandable error message if file name conns illegal characters
 - Fix for bug 26073: Provide statement's string representation on log invocation
 - Fix for bug 26082: Convert native null object to JSONObject.NULL
 - Fix for bug 26100: Create a unique file name for each mail inside a ZIP archive

* 2013-04-22 - martin.herfurth@open-xchange.com

 - Fix for bug 26046: Fixed conflict bahaviour for DST and Full time recurring appointments.

* 2013-04-22 - thorben.betten@open-xchange.com

 - Fix for bug 26028: Indicate proper file name for single multipart-part
 - Fix for bug 26065: Check if MP3 file provides proper ID2v2 tag
 - Fix for bug 26032: Properly support media request through AppleCoreMedia user agent
 - Fix for bug 26045: Maintain original OXException instance
 - Fix for bug 26083: Consider all parameters when generating key for preview cache

* 2013-04-20 - thorben.betten@open-xchange.com
